--- a/songoer/src/main/resources/application.properties
+++ b/songoer/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/library
+spring.datasource.username=osama
+spring.datasource.password=0000
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
